--- a/Sonic1/Sonic1/Sonic1.vcxproj
+++ b/Sonic1/Sonic1/Sonic1.vcxproj
@@ -130,13 +130,15 @@
   <ItemGroup>
     <ClCompile Include="geometry.cpp" />
     <ClCompile Include="imReadBasics.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="mainCall.cpp" />
+    <ClCompile Include="openGLBasics.cpp" />
     <ClCompile Include="openGLTest.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="geometry.h" />
     <ClInclude Include="imReadBasics.h" />
+    <ClInclude Include="openGLBasics.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
