Added SOIL for openGL image loading for texture

--- a/Sonic1/Sonic1/Sonic1.vcxproj
+++ b/Sonic1/Sonic1/Sonic1.vcxproj
@@ -70,8 +70,8 @@
     <LibraryPath>D:\opencv\build\x64\vc11\lib;D:\thesis\glew-1.12.0\lib;D:\thesis\glfw-3.1.bin.WIN64\lib-vc2012;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\opencv\build\include;D:\thesis\glfw-3.1.bin.WIN64\include;D:\thesis\glew-1.12.0-win32\glew-1.12.0\include;D:\thesis\glm;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\opencv\build\x64\vc11\lib;D:\thesis\glfw-3.1.bin.WIN64\lib-vc2012;D:\thesis\glew-1.12.0-win32\glew-1.12.0\lib\Release\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\opencv\build\include;D:\thesis\glfw-3.1.bin.WIN64\include;D:\thesis\glew-1.12.0-win32\glew-1.12.0\include;D:\thesis\glm;D:\thesis\Soil\Simple OpenGL Image Library\src;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\opencv\build\x64\vc11\lib;D:\thesis\glfw-3.1.bin.WIN64\lib-vc2012;D:\thesis\glew-1.12.0-win32\glew-1.12.0\lib\Release\x64;D:\thesis\Soil\Simple OpenGL Image Library\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -94,7 +94,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_calib3d2411d.lib;opencv_contrib2411d.lib;opencv_core2411d.lib;opencv_features2d2411d.lib;opencv_flann2411d.lib;opencv_gpu2411d.lib;opencv_highgui2411d.lib;opencv_imgproc2411d.lib;opencv_legacy2411d.lib;opencv_ml2411d.lib;opencv_nonfree2411d.lib;opencv_objdetect2411d.lib;opencv_ocl2411d.lib;opencv_photo2411d.lib;opencv_stitching2411d.lib;opencv_superres2411d.lib;opencv_ts2411d.lib;opencv_video2411d.lib;opencv_videostab2411d.lib;opengl32.lib;glfw3.lib;glew32s.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_calib3d2411d.lib;opencv_contrib2411d.lib;opencv_core2411d.lib;opencv_features2d2411d.lib;opencv_flann2411d.lib;opencv_gpu2411d.lib;opencv_highgui2411d.lib;opencv_imgproc2411d.lib;opencv_legacy2411d.lib;opencv_ml2411d.lib;opencv_nonfree2411d.lib;opencv_objdetect2411d.lib;opencv_ocl2411d.lib;opencv_photo2411d.lib;opencv_stitching2411d.lib;opencv_superres2411d.lib;opencv_ts2411d.lib;opencv_video2411d.lib;opencv_videostab2411d.lib;opengl32.lib;glfw3.lib;glew32s.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ProjectReference>
