--- a/Sonic1/Sonic1/Sonic1.vcxproj.filters
+++ b/Sonic1/Sonic1/Sonic1.vcxproj.filters
@@ -55,6 +55,12 @@
     <None Include="cube.vsh">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="texture.vsh">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="texture.fsh">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="positionShaderTwo.vsh">
