Reading and Writing Calibration data into a XML file

--- a/Sonic1/Sonic1/Sonic1.vcxproj.filters
+++ b/Sonic1/Sonic1/Sonic1.vcxproj.filters
@@ -73,4 +73,7 @@
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="calibInfo.xml" />
+  </ItemGroup>
 </Project>
