--- a/Sonic1/Sonic1/Sonic1.vcxproj
+++ b/Sonic1/Sonic1/Sonic1.vcxproj
@@ -154,6 +154,9 @@
   <ItemGroup>
     <Text Include="positionShaderTwo.vsh" />
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="calibInfo.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
