--- a/Sonic1/Sonic1/Sonic1.vcxproj.filters
+++ b/Sonic1/Sonic1/Sonic1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="camCalib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="glCenturai.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="camCalib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="glCenturai.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -70,6 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="positionShaderTwo.vsh">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="box.vsh">
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
