Working on SolvePNP, trying to solve RVec TVec to OpenGL transformation

--- a/Sonic1/Sonic1/Sonic1.vcxproj.filters
+++ b/Sonic1/Sonic1/Sonic1.vcxproj.filters
@@ -81,6 +81,9 @@
     <Text Include="box.vsh">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="box.fsh">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="calibInfo.xml" />
