--- a/Sonic1/Sonic1/Sonic1.vcxproj
+++ b/Sonic1/Sonic1/Sonic1.vcxproj
@@ -156,9 +156,12 @@
   <ItemGroup>
     <Text Include="positionShaderTwo.vsh" />
     <Text Include="box.vsh" />
+    <Text Include="box.fsh" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="calibInfo.xml" />
+    <Xml Include="calibInfo.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
