--- a/Sonic1/Sonic1/Sonic1.vcxproj.filters
+++ b/Sonic1/Sonic1/Sonic1.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="glCenturai.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="glModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="glCenturai.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="glModel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
