--- a/Sonic1/Sonic1/Sonic1.vcxproj
+++ b/Sonic1/Sonic1/Sonic1.vcxproj
@@ -73,6 +73,10 @@
     <IncludePath>D:\opencv\build\include;D:\thesis\glfw-3.1.bin.WIN64\include;D:\thesis\glew-1.12.0-win32\glew-1.12.0\include;D:\thesis\glm;D:\thesis\Soil\Simple OpenGL Image Library\src;$(IncludePath)</IncludePath>
     <LibraryPath>D:\opencv\build\x64\vc11\lib;D:\thesis\glfw-3.1.bin.WIN64\lib-vc2012;D:\thesis\glew-1.12.0-win32\glew-1.12.0\lib\Release\x64;D:\thesis\Soil\Simple OpenGL Image Library\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>D:\opencv\build\include;D:\thesis\glfw-3.1.bin.WIN64\include;D:\thesis\glew-1.12.0-win32\glew-1.12.0\include;D:\thesis\glm;D:\thesis\Soil\Simple OpenGL Image Library\src;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\opencv\build\x64\vc11\lib;D:\thesis\glfw-3.1.bin.WIN64\lib-vc2012;D:\thesis\glew-1.12.0-win32\glew-1.12.0\lib\Release\x64;D:\thesis\Soil\Simple OpenGL Image Library\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -127,12 +131,14 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opencv_calib3d2411d.lib;opencv_contrib2411d.lib;opencv_core2411d.lib;opencv_features2d2411d.lib;opencv_flann2411d.lib;opencv_gpu2411d.lib;opencv_highgui2411d.lib;opencv_imgproc2411d.lib;opencv_legacy2411d.lib;opencv_ml2411d.lib;opencv_nonfree2411d.lib;opencv_objdetect2411d.lib;opencv_ocl2411d.lib;opencv_photo2411d.lib;opencv_stitching2411d.lib;opencv_superres2411d.lib;opencv_ts2411d.lib;opencv_video2411d.lib;opencv_videostab2411d.lib;opengl32.lib;glfw3.lib;glew32s.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="camCalib.cpp" />
     <ClCompile Include="geometry.cpp" />
     <ClCompile Include="glCenturai.cpp" />
+    <ClCompile Include="glModel.cpp" />
     <ClCompile Include="imReadBasics.cpp" />
     <ClCompile Include="mainCall.cpp" />
     <ClCompile Include="glDraws.cpp" />
@@ -142,6 +148,7 @@
     <ClInclude Include="camCalib.h" />
     <ClInclude Include="geometry.h" />
     <ClInclude Include="glCenturai.h" />
+    <ClInclude Include="glModel.h" />
     <ClInclude Include="imReadBasics.h" />
     <ClInclude Include="glDraws.h" />
     <ClInclude Include="utils.h" />
