--- a/Sonic1/Sonic1/Sonic1.vcxproj.filters
+++ b/Sonic1/Sonic1/Sonic1.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="PCClock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="colorSegmentation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PCClock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="colorSegmentation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -99,5 +105,6 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="calibInfo.xml" />
+    <Xml Include="hsvValues.xml" />
   </ItemGroup>
 </Project>
