--- a/Sonic1/Sonic1/Sonic1.vcxproj
+++ b/Sonic1/Sonic1/Sonic1.vcxproj
@@ -173,7 +173,9 @@
     <Xml Include="calibInfo.xml">
       <SubType>Designer</SubType>
     </Xml>
-    <Xml Include="hsvValues.xml" />
+    <Xml Include="hsvValues.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
